dynamix/force-app/main/default/objects/Account/fields/Aadhar_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Uploaded_Date__c</fullName>
    <label>Aadhar Uploaded Date</label>
    <type>DateTime</type>
</CustomField>