dynamix/force-app/main/default/objects/Account/fields/Account_Form_OTP__c.field-meta.xml
<CustomField>
    <fullName>Account_Form_OTP__c</fullName>
    <label>Account Form OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>