dynamix/force-app/main/default/objects/Account/fields/Address_Proof__c.field-meta.xml
<CustomField>
    <fullName>Address_Proof__c</fullName>
    <label>Address Proof</label>
    <length>255</length>
    <type>Text</type>
</CustomField>