dynamix/force-app/main/default/objects/Account/fields/Affiliation_to_any_Broker_Association__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_to_any_Broker_Association__c</fullName>
    <label>Affiliation to any Broker Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Jointly</fullName>
            </value>
            <value>
                <fullName>Anyone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>