dynamix/force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Below 25</fullName>
            </value>
            <value>
                <fullName>25-30</fullName>
            </value>
            <value>
                <fullName>31-35</fullName>
            </value>
            <value>
                <fullName>36-40</fullName>
            </value>
            <value>
                <fullName>41-45</fullName>
            </value>
            <value>
                <fullName>46-50</fullName>
            </value>
            <value>
                <fullName>Above 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>