dynamix/force-app/main/default/objects/Account/fields/Anniversary_date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_date__c</fullName>
    <label>Anniversary date</label>
    <type>Date</type>
</CustomField>