dynamix/force-app/main/default/objects/Account/fields/Apartment_Flat__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Flat__c</fullName>
    <label>Apartment/Flat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>