dynamix/force-app/main/default/objects/Account/fields/Brokerage_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_GST_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage GST Applicable</label>
    <type>Checkbox</type>
</CustomField>