dynamix/force-app/main/default/objects/Account/fields/Business_Account_Signatory_Designation__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Signatory_Designation__c</fullName>
    <label>Business Account Signatory Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>