dynamix/force-app/main/default/objects/Account/fields/Business_Account_Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Signatory_Name__c</fullName>
    <label>Business Account Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>