dynamix/force-app/main/default/objects/Account/fields/CIN_No__c.field-meta.xml
<CustomField>
    <fullName>CIN_No__c</fullName>
    <label>CIN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>