dynamix/force-app/main/default/objects/Account/fields/CP_Empanelment_Stages__c.field-meta.xml
<CustomField>
    <fullName>CP_Empanelment_Stages__c</fullName>
    <label>CP Empanelment Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unregistered</fullName>
                <default>true</default>
                <label>Unregistered</label>
            </value>
            <value>
                <fullName>Validate Partner</fullName>
            </value>
            <value>
                <fullName>Registration Initiated</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>