dynamix/force-app/main/default/objects/Account/fields/CP_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Firm_Name__c</fullName>
    <label>CP Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>