dynamix/force-app/main/default/objects/Account/fields/CP_No__c.field-meta.xml
<CustomField>
    <fullName>CP_No__c</fullName>
    <displayFormat>RG-{00000}</displayFormat>
    <label>CP No.</label>
    <type>AutoNumber</type>
</CustomField>