dynamix/force-app/main/default/objects/Account/fields/CP_Number__c.field-meta.xml
<CustomField>
    <fullName>CP_Number__c</fullName>
    <label>CP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>