dynamix/force-app/main/default/objects/Account/fields/CP_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>CP_Unique_Number__c</fullName>
    <displayFormat>CP-{0000}</displayFormat>
    <label>CP Unique Number</label>
    <type>AutoNumber</type>
</CustomField>