dynamix/force-app/main/default/objects/Account/fields/Date_of_Board_Resolution_Authority_Lett__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Board_Resolution_Authority_Lett__c</fullName>
    <label>Board Resolution/Authority Letter Date</label>
    <type>Date</type>
</CustomField>