dynamix/force-app/main/default/objects/Account/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residental</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Commerical</fullName>
            </value>
            <value>
                <fullName>Industrial Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>