dynamix/force-app/main/default/objects/Account/fields/Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type__c</fullName>
    <label>CP Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietor</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>