dynamix/force-app/main/default/objects/Account/fields/Focus_Location__c.field-meta.xml
<CustomField>
    <fullName>Focus_Location__c</fullName>
    <label>Focus Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Western Suburbs</fullName>
            </value>
            <value>
                <fullName>Central Suburbs</fullName>
            </value>
            <value>
                <fullName>South Mumbai</fullName>
            </value>
            <value>
                <fullName>Outside Mumbai</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>