dynamix/force-app/main/default/objects/Account/fields/GSTIN_No__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_No__c</fullName>
    <label>GSTIN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>