dynamix/force-app/main/default/objects/Account/fields/In_Favour_Of__c.field-meta.xml
<CustomField>
    <fullName>In_Favour_Of__c</fullName>
    <label>In Favour Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>