dynamix/force-app/main/default/objects/Account/fields/Is_This_Your_First_Home__c.field-meta.xml
<CustomField>
    <fullName>Is_This_Your_First_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is This Your First Home?</label>
    <type>Checkbox</type>
</CustomField>