dynamix/force-app/main/default/objects/Account/fields/Name_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Directors__c</fullName>
    <label>Name of Directors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>