dynamix/force-app/main/default/objects/Account/fields/Name_of_Share_Holders_Partners__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Share_Holders_Partners__c</fullName>
    <label>Name of Share Holders / Partners:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>