dynamix/force-app/main/default/objects/Account/fields/Number_Of_Persons_In_Family__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Persons_In_Family__c</fullName>
    <label>Number Of Persons In Family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>