dynamix/force-app/main/default/objects/Account/fields/Number_of_years_in_Operation__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_in_Operation__c</fullName>
    <label>Number of years in Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>