dynamix/force-app/main/default/objects/Account/fields/OCI_PIO_Card__c.field-meta.xml
<CustomField>
    <fullName>OCI_PIO_Card__c</fullName>
    <label>OCI/PIO Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>