dynamix/force-app/main/default/objects/Account/fields/Office_Locality__c.field-meta.xml
<CustomField>
    <fullName>Office_Locality__c</fullName>
    <label>Office Locality</label>
    <type>TextArea</type>
</CustomField>