dynamix/force-app/main/default/objects/Account/fields/Office_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Pin_Code__c</fullName>
    <label>Office Pin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>