dynamix/force-app/main/default/objects/Account/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>