dynamix/force-app/main/default/objects/Account/fields/Organisation_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Office_Address__c</fullName>
    <label>Organisation Office Address</label>
    <type>TextArea</type>
</CustomField>