dynamix/force-app/main/default/objects/Account/fields/Organisation_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Phone_Number__c</fullName>
    <label>Organisation Phone Number</label>
    <type>Phone</type>
</CustomField>