dynamix/force-app/main/default/objects/Account/fields/Other_Details_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Details_Remarks__c</fullName>
    <label>Other Details / Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>