dynamix/force-app/main/default/objects/Account/fields/PAN_Details__c.field-meta.xml
<CustomField>
    <fullName>PAN_Details__c</fullName>
    <label>PAN Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>