dynamix/force-app/main/default/objects/Account/fields/Percentage_Holding__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Holding__c</fullName>
    <label>Percentage Holding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>