dynamix/force-app/main/default/objects/Account/fields/Preferred_Address_for_all_Corresppondenc__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Address_for_all_Corresppondenc__c</fullName>
    <label>Preferred Address for all Corresppondenc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>