dynamix/force-app/main/default/objects/Account/fields/Referral_By_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Referral_By_Sales_Manager__c</fullName>
    <label>Referral By Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>