dynamix/force-app/main/default/objects/Account/fields/Registered_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Address__c</fullName>
    <label>Registered Office Address</label>
    <type>TextArea</type>
</CustomField>