dynamix/force-app/main/default/objects/Account/fields/Rera_Certificate_Upload__c.field-meta.xml
<CustomField>
    <fullName>Rera_Certificate_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rera Certificate Upload</label>
    <type>Checkbox</type>
</CustomField>