dynamix/force-app/main/default/objects/Account/fields/Rera_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Rera_Expiry_Date__c</fullName>
    <label>Rera Expiry Date</label>
    <type>Date</type>
</CustomField>