dynamix/force-app/main/default/objects/Account/fields/RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Number__c</fullName>
    <label>RERA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>