dynamix/force-app/main/default/objects/Account/fields/Rera_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Rera_Uploaded_Date__c</fullName>
    <label>Rera Uploaded Date</label>
    <type>DateTime</type>
</CustomField>