dynamix/force-app/main/default/objects/Account/fields/Residence_Address__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address__c</fullName>
    <label>Residence Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>