dynamix/force-app/main/default/objects/Account/fields/Spouse_Work_Locality__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Work_Locality__c</fullName>
    <label>Spouse Work Locality</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>