dynamix/force-app/main/default/objects/Account/fields/Spouse_Working_Status__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Working_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse Working Status</label>
    <type>Checkbox</type>
</CustomField>